@@ -1,3 +1,7 @@
+*** 20000812_2 by lusky
+yet another test commit
+
+
 *** 20000812_1 by lusky
 
 *** 20000809_2 by lusky
